# codex

./: .env.example  .env.staging.example  .gitignore  README.md  docker-compose.yml  mypy-baseline.json  pyproject.toml
backend/: __init__.py  config.py  dependencies.py  main.py  security.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: production-release-p0.md  production-staging-status-2026-07-23.md  tuning-lab.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
host-agent/: agent.py  buffer.py  config.py
host_agent/: __init__.py  agent.py  buffer.py  config.py  live_managed_conf_check.py  managed_conf.py
scripts/: benchmark_tuning_lab.py  check_mypy_baseline.py  create_api_principal.py  deploy.sh  dev-setup.sh  drill_regression_rollback.py  evidence_maintenance.py  provision_staging_lab.py  run-tests.sh  staging_drills.py  staging_init.py  staging_preflight.py  staging_soak.py  staging_up.sh  verify_managed_backend.py  verify_off_host_restore.py  verify_staging_restore.sh
tests/: __init__.py  conftest.py  test_ai_planning.py  test_audit_api.py  test_audit_logger.py  test_baseline_measurement.py  test_baselines_api.py  test_candidate_optimizer.py  test_candidate_orchestration.py  test_candidates_api.py  test_configuration_backends.py  test_demo_mode.py  test_durable_baseline_gate.py  test_evidence_api.py  test_evidence_buffer.py  test_evidence_lifecycle.py  test_evidence_lifecycle_integration.py  test_fleet_api.py  test_fleet_service.py  test_guardrail_allowlist.py  test_guardrail_safety.py  test_health.py  test_host_agent.py  (+20 more)
(+134 files in other folders)
