[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-postgres-dba-agent"
version = "0.1.0"
description = "Autonomous Postgres DBA Agent Platform - Web-based control plane for autonomous PostgreSQL investigation and tuning loops"
readme = {text = "Autonomous Postgres DBA Agent Platform", content-type = "text/plain"}
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "host-agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: Property-based tests using Hypothesis",
    "integration: Integration tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hypothesis]
max_examples = 100
deadline = 5000
suppress_health_check = ["too_slow"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
